# vcon-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
vcon-types/: Cargo.toml  build.rs
vcon-types/examples/: email_thread_text_builder.rs
vcon-types/examples/cddl/: vcon.cddl
vcon-types/examples/json/: email-thread-multipart.json  email-thread-text.json  two-party-call-with-analysis.json  two-party-call-with-external-reference-recording.json  two-party-call-with-inline-recording.json
vcon-types/src/: address.rs  analysis.rs  attachment.rs  body.rs  content.rs  date.rs  dialog.rs  doc.rs  error.rs  event.rs  extension_object.rs  lib.rs  mime.rs  party.rs  reference.rs  signature.rs  url.rs  uuid.rs  version.rs
vcon-types/src/analysis/: mod.rs
vcon-types/tests/: examples.rs
